--- a/notebooks/calculations_churn.ipynb
+++ b/notebooks/calculations_churn.ipynb
@@ -17419,7 +17419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17427,7 +17427,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Top 5 Most Common Churn Events:\n",
+      "Top 10 Most Common Churn Events:\n",
       "--------------------------------\n",
       "Event: dashboard:my-book::view\n",
       "Total Occurrences: 65960\n",
@@ -17448,12 +17448,32 @@
       "Event: dashboard:my-book:configurable-table:render\n",
       "Total Occurrences: 19425\n",
       "Average Terminal Rate: 1.93%\n",
+      "--------------------------------\n",
+      "Event: action-center:::close-click\n",
+      "Total Occurrences: 14587\n",
+      "Average Terminal Rate: 1.07%\n",
+      "--------------------------------\n",
+      "Event: account-property-rating:perils::view\n",
+      "Total Occurrences: 13929\n",
+      "Average Terminal Rate: 0.58%\n",
+      "--------------------------------\n",
+      "Event: account-lines::configurable-table:render\n",
+      "Total Occurrences: 7000\n",
+      "Average Terminal Rate: 1.12%\n",
+      "--------------------------------\n",
+      "Event: action-center:action-details::view\n",
+      "Total Occurrences: 5716\n",
+      "Average Terminal Rate: 0.38%\n",
+      "--------------------------------\n",
+      "Event: account-lines::widget:render\n",
+      "Total Occurrences: 4718\n",
+      "Average Terminal Rate: 0.87%\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
-    "# Query to get top 5 most common churn events across all users\n",
+    "# Query to get top 10 most common churn events across all users\n",
     "query_response = supabase.table(\"user_table_refined\").select(\"top_churn_events\").execute()\n",
     "\n",
     "# Flatten all churn events\n",
@@ -17479,17 +17499,17 @@
     "    for event, total_rate in event_total_rates.items()\n",
     "}\n",
     "\n",
-    "# Get top 5 events by count\n",
-    "top_5_events = sorted(\n",
+    "# Get top 10 events by count\n",
+    "top_10_events = sorted(\n",
     "    [(event, count, event_avg_rates[event]) for event, count in event_counts.items()],\n",
     "    key=lambda x: x[1],\n",
     "    reverse=True\n",
-    ")[:5]\n",
+    ")[:10]\n",
     "\n",
     "# Print results\n",
-    "print(\"\\nTop 5 Most Common Churn Events:\")\n",
+    "print(\"\\nTop 10 Most Common Churn Events:\")\n",
     "print(\"--------------------------------\")\n",
-    "for event, count, avg_rate in top_5_events:\n",
+    "for event, count, avg_rate in top_10_events:\n",
     "    print(f\"Event: {event}\")\n",
     "    print(f\"Total Occurrences: {count}\")\n",
     "    print(f\"Average Terminal Rate: {avg_rate:.2%}\")\n",
