--- a/notebooks/other_calcs.ipynb
+++ b/notebooks/other_calcs.ipynb
@@ -35956,6 +35956,437 @@
     "# Execute the update\n",
     "update_user_active_periods()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Session Time Statistics:\n",
+      "--------------------------------\n",
+      "Number of Users: 1,675\n",
+      "Average Session Duration: 2.78 minutes\n",
+      "Maximum Session Duration: 104.15 minutes\n",
+      "Median Session Duration: 0.00 minutes\n",
+      "25th Percentile: 0.00 minutes\n",
+      "75th Percentile: 0.04 minutes\n",
+      "--------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to get session times for all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"average_session_time\").execute()\n",
+    "\n",
+    "# Filter out None values and collect all session times\n",
+    "session_times = [\n",
+    "    user[\"average_session_time\"] \n",
+    "    for user in query_response.data \n",
+    "    if user[\"average_session_time\"] is not None\n",
+    "]\n",
+    "\n",
+    "if session_times:\n",
+    "    # Calculate statistics\n",
+    "    total_users = len(session_times)\n",
+    "    overall_average = sum(session_times) / total_users\n",
+    "    max_duration = max(session_times)\n",
+    "    \n",
+    "    # Convert all times to minutes\n",
+    "    average_minutes = overall_average / 60\n",
+    "    max_minutes = max_duration / 60\n",
+    "    \n",
+    "    # Calculate median\n",
+    "    sorted_times = sorted(session_times)\n",
+    "    median = sorted_times[len(sorted_times) // 2]\n",
+    "    median_minutes = median / 60\n",
+    "    \n",
+    "    # Calculate 25th and 75th percentiles\n",
+    "    p25 = sorted_times[len(sorted_times) // 4] / 60\n",
+    "    p75 = sorted_times[len(sorted_times) * 3 // 4] / 60\n",
+    "\n",
+    "    print(\"\\nSession Time Statistics:\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    print(f\"Number of Users: {total_users:,}\")  # Add comma separator for large numbers\n",
+    "    print(f\"Average Session Duration: {average_minutes:.2f} minutes\")\n",
+    "    print(f\"Maximum Session Duration: {max_minutes:.2f} minutes\")\n",
+    "    print(f\"Median Session Duration: {median_minutes:.2f} minutes\")\n",
+    "    print(f\"25th Percentile: {p25:.2f} minutes\")\n",
+    "    print(f\"75th Percentile: {p75:.2f} minutes\")\n",
+    "    print(\"--------------------------------\")\n",
+    "else:\n",
+    "    print(\"No session time data available\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total Session Time Statistics:\n",
+      "--------------------------------\n",
+      "Number of Users: 1,675\n",
+      "Average Total Time: 0.73 hours\n",
+      "Maximum Total Time: 26.75 hours\n",
+      "Median Total Time: 0.00 hours\n",
+      "25th Percentile: 0.00 hours\n",
+      "75th Percentile: 0.00 hours\n",
+      "--------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to get total session times for all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"total_session_time\").execute()\n",
+    "\n",
+    "# Filter out None values and collect all total session times\n",
+    "session_times = [\n",
+    "    user[\"total_session_time\"] \n",
+    "    for user in query_response.data \n",
+    "    if user[\"total_session_time\"] is not None\n",
+    "]\n",
+    "\n",
+    "if session_times:\n",
+    "    # Calculate statistics\n",
+    "    total_users = len(session_times)\n",
+    "    overall_average = sum(session_times) / total_users\n",
+    "    max_duration = max(session_times)\n",
+    "    \n",
+    "    # Convert all times to hours for better readability\n",
+    "    average_hours = overall_average / 3600  # Convert seconds to hours\n",
+    "    max_hours = max_duration / 3600\n",
+    "    \n",
+    "    # Calculate median\n",
+    "    sorted_times = sorted(session_times)\n",
+    "    median = sorted_times[len(sorted_times) // 2]\n",
+    "    median_hours = median / 3600\n",
+    "    \n",
+    "    # Calculate 25th and 75th percentiles\n",
+    "    p25 = sorted_times[len(sorted_times) // 4] / 3600\n",
+    "    p75 = sorted_times[len(sorted_times) * 3 // 4] / 3600\n",
+    "\n",
+    "    print(\"\\nTotal Session Time Statistics:\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    print(f\"Number of Users: {total_users:,}\")  # Add comma separator for large numbers\n",
+    "    print(f\"Average Total Time: {average_hours:.2f} hours\")\n",
+    "    print(f\"Maximum Total Time: {max_hours:.2f} hours\")\n",
+    "    print(f\"Median Total Time: {median_hours:.2f} hours\")\n",
+    "    print(f\"25th Percentile: {p25:.2f} hours\")\n",
+    "    print(f\"75th Percentile: {p75:.2f} hours\")\n",
+    "    print(\"--------------------------------\")\n",
+    "else:\n",
+    "    print(\"No total session time data available\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Session Frequency Statistics (30-day period):\n",
+      "--------------------------------\n",
+      "Number of Users: 1,675\n",
+      "Average Sessions per User: 4.2\n",
+      "Maximum Sessions: 104\n",
+      "Median Sessions: 0\n",
+      "25th Percentile: 0\n",
+      "75th Percentile: 1\n",
+      "--------------------------------\n",
+      "\n",
+      "Session Frequency Distribution:\n",
+      "--------------------------------\n",
+      "0-1 sessions: 1,296 users (77.4%)\n",
+      "2-5 sessions: 99 users (5.9%)\n",
+      "6-10 sessions: 52 users (3.1%)\n",
+      "11-20 sessions: 91 users (5.4%)\n",
+      "21-30 sessions: 61 users (3.6%)\n",
+      "31+ sessions: 76 users (4.5%)\n",
+      "--------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to get session frequencies for all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"frequency_of_sessions\").execute()\n",
+    "\n",
+    "# Filter out None values and collect all frequencies\n",
+    "session_frequencies = [\n",
+    "    user[\"frequency_of_sessions\"] \n",
+    "    for user in query_response.data \n",
+    "    if user[\"frequency_of_sessions\"] is not None\n",
+    "]\n",
+    "\n",
+    "if session_frequencies:\n",
+    "    # Calculate statistics\n",
+    "    total_users = len(session_frequencies)\n",
+    "    overall_average = sum(session_frequencies) / total_users\n",
+    "    max_frequency = max(session_frequencies)\n",
+    "    \n",
+    "    # Calculate median\n",
+    "    sorted_frequencies = sorted(session_frequencies)\n",
+    "    median = sorted_frequencies[len(sorted_frequencies) // 2]\n",
+    "    \n",
+    "    # Calculate 25th and 75th percentiles\n",
+    "    p25 = sorted_frequencies[len(sorted_frequencies) // 4]\n",
+    "    p75 = sorted_frequencies[len(sorted_frequencies) * 3 // 4]\n",
+    "\n",
+    "    print(\"\\nSession Frequency Statistics (30-day period):\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    print(f\"Number of Users: {total_users:,}\")  # Add comma separator for large numbers\n",
+    "    print(f\"Average Sessions per User: {overall_average:.1f}\")\n",
+    "    print(f\"Maximum Sessions: {max_frequency}\")\n",
+    "    print(f\"Median Sessions: {median}\")\n",
+    "    print(f\"25th Percentile: {p25}\")\n",
+    "    print(f\"75th Percentile: {p75}\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    \n",
+    "    # Calculate distribution buckets\n",
+    "    print(\"\\nSession Frequency Distribution:\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    ranges = [(0, 1), (2, 5), (6, 10), (11, 20), (21, 30), (31, float('inf'))]\n",
+    "    for start, end in ranges:\n",
+    "        if end == float('inf'):\n",
+    "            count = sum(1 for f in session_frequencies if f >= start)\n",
+    "            percentage = (count / total_users) * 100\n",
+    "            print(f\"{start}+ sessions: {count:,} users ({percentage:.1f}%)\")\n",
+    "        else:\n",
+    "            count = sum(1 for f in session_frequencies if start <= f <= end)\n",
+    "            percentage = (count / total_users) * 100\n",
+    "            print(f\"{start}-{end} sessions: {count:,} users ({percentage:.1f}%)\")\n",
+    "    print(\"--------------------------------\")\n",
+    "else:\n",
+    "    print(\"No session frequency data available\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "30-Day Retention Statistics:\n",
+      "--------------------------------\n",
+      "Number of Users: 1,675\n",
+      "Average Retention Rate: 1.9%\n",
+      "Maximum Retention Rate: 16.7%\n",
+      "Median Retention Rate: 0.0%\n",
+      "25th Percentile: 0.0%\n",
+      "75th Percentile: 3.3%\n",
+      "--------------------------------\n",
+      "\n",
+      "Retention Rate Distribution:\n",
+      "--------------------------------\n",
+      "0%-10%: 1,644 users (98.1%)\n",
+      "10%-30%: 177 users (10.6%)\n",
+      "30%-50%: 0 users (0.0%)\n",
+      "50%-70%: 0 users (0.0%)\n",
+      "70%-90%: 0 users (0.0%)\n",
+      "90%-100%: 0 users (0.0%)\n",
+      "--------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to get 30-day retention rates for all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"user_retention_30\").execute()\n",
+    "\n",
+    "# Filter out None values and collect all retention rates\n",
+    "retention_rates = [\n",
+    "    user[\"user_retention_30\"] \n",
+    "    for user in query_response.data \n",
+    "    if user[\"user_retention_30\"] is not None\n",
+    "]\n",
+    "\n",
+    "if retention_rates:\n",
+    "    # Calculate statistics\n",
+    "    total_users = len(retention_rates)\n",
+    "    overall_average = sum(retention_rates) / total_users\n",
+    "    max_retention = max(retention_rates)\n",
+    "    \n",
+    "    # Calculate median\n",
+    "    sorted_rates = sorted(retention_rates)\n",
+    "    median = sorted_rates[len(sorted_rates) // 2]\n",
+    "    \n",
+    "    # Calculate 25th and 75th percentiles\n",
+    "    p25 = sorted_rates[len(sorted_rates) // 4]\n",
+    "    p75 = sorted_rates[len(sorted_rates) * 3 // 4]\n",
+    "\n",
+    "    print(\"\\n30-Day Retention Statistics:\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    print(f\"Number of Users: {total_users:,}\")\n",
+    "    print(f\"Average Retention Rate: {overall_average:.1%}\")\n",
+    "    print(f\"Maximum Retention Rate: {max_retention:.1%}\")\n",
+    "    print(f\"Median Retention Rate: {median:.1%}\")\n",
+    "    print(f\"25th Percentile: {p25:.1%}\")\n",
+    "    print(f\"75th Percentile: {p75:.1%}\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    \n",
+    "    # Calculate distribution buckets\n",
+    "    print(\"\\nRetention Rate Distribution:\")\n",
+    "    print(\"--------------------------------\")\n",
+    "    ranges = [(0, 0.1), (0.1, 0.3), (0.3, 0.5), (0.5, 0.7), (0.7, 0.9), (0.9, 1.0)]\n",
+    "    for start, end in ranges:\n",
+    "        count = sum(1 for r in retention_rates if start <= r <= end)\n",
+    "        percentage = (count / total_users) * 100\n",
+    "        print(f\"{start*100:.0f}%-{end*100:.0f}%: {count:,} users ({percentage:.1f}%)\")\n",
+    "    print(\"--------------------------------\")\n",
+    "else:\n",
+    "    print(\"No retention rate data available\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query to get daily active periods for all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"daily_active_periods\").execute()\n",
+    "\n",
+    "# Flatten all periods and count occurrences\n",
+    "period_counts = {}\n",
+    "for user in query_response.data:\n",
+    "    if user[\"daily_active_periods\"]:  # Check if not None or empty\n",
+    "        # Count each unique period only once per user\n",
+    "        user_periods = set(period[\"hour\"] for period in user[\"daily_active_periods\"])\n",
+    "        for period in user_periods:\n",
+    "            period_counts[period] = period_counts.get(period, 0) + 1\n",
+    "\n",
+    "# Get top 5 most common periods\n",
+    "top_5_periods = sorted(\n",
+    "    period_counts.items(),\n",
+    "    key=lambda x: x[1],  # Sort by count\n",
+    "    reverse=True\n",
+    ")[:5]\n",
+    "\n",
+    "# Calculate percentage of users for each period\n",
+    "total_users = len([u for u in query_response.data if u[\"daily_active_periods\"]])\n",
+    "\n",
+    "print(\"\\nTop 5 Most Active Time Periods:\")\n",
+    "print(\"--------------------------------\")\n",
+    "for hour, count in top_5_periods:\n",
+    "    percentage = (count / total_users) * 100 if total_users > 0 else 0\n",
+    "    # Format the time period\n",
+    "    start_hour = int(hour)\n",
+    "    end_hour = (start_hour + 1) % 24\n",
+    "    period = f\"{str(start_hour).zfill(2)}:00-{str(end_hour).zfill(2)}:00\"\n",
+    "    \n",
+    "    print(f\"Time Period: {period}\")\n",
+    "    print(f\"Number of Users: {count:,}\")\n",
+    "    print(f\"Percentage of Users: {percentage:.1f}%\")\n",
+    "    print(\"--------------------------------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 Most Active Time Periods:\n",
+      "--------------------------------\n",
+      "Time Period: 15:00-16:00\n",
+      "Number of Users: 757\n",
+      "Percentage of Users: 45.2%\n",
+      "--------------------------------\n",
+      "Time Period: 19:00-20:00\n",
+      "Number of Users: 717\n",
+      "Percentage of Users: 42.8%\n",
+      "--------------------------------\n",
+      "Time Period: 14:00-15:00\n",
+      "Number of Users: 709\n",
+      "Percentage of Users: 42.3%\n",
+      "--------------------------------\n",
+      "Time Period: 16:00-17:00\n",
+      "Number of Users: 693\n",
+      "Percentage of Users: 41.4%\n",
+      "--------------------------------\n",
+      "Time Period: 18:00-19:00\n",
+      "Number of Users: 671\n",
+      "Percentage of Users: 40.1%\n",
+      "--------------------------------\n",
+      "Time Period: 17:00-18:00\n",
+      "Number of Users: 653\n",
+      "Percentage of Users: 39.0%\n",
+      "--------------------------------\n",
+      "Time Period: 20:00-21:00\n",
+      "Number of Users: 597\n",
+      "Percentage of Users: 35.6%\n",
+      "--------------------------------\n",
+      "Time Period: 13:00-14:00\n",
+      "Number of Users: 486\n",
+      "Percentage of Users: 29.0%\n",
+      "--------------------------------\n",
+      "Time Period: 21:00-22:00\n",
+      "Number of Users: 449\n",
+      "Percentage of Users: 26.8%\n",
+      "--------------------------------\n",
+      "Time Period: 22:00-23:00\n",
+      "Number of Users: 264\n",
+      "Percentage of Users: 15.8%\n",
+      "--------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to get daily active periods for all users\n",
+    "query_response = supabase.table(\"user_table_refined\").select(\"daily_active_periods\").execute()\n",
+    "\n",
+    "# Flatten all periods and count occurrences\n",
+    "period_counts = {}\n",
+    "for user in query_response.data:\n",
+    "    if user[\"daily_active_periods\"]:  # Check if not None or empty\n",
+    "        # Count each unique period only once per user\n",
+    "        user_periods = set(period[\"hour\"] for period in user[\"daily_active_periods\"])\n",
+    "        for period in user_periods:\n",
+    "            period_counts[period] = period_counts.get(period, 0) + 1\n",
+    "\n",
+    "# Get top 10 most common periods\n",
+    "top_10_periods = sorted(\n",
+    "    period_counts.items(),\n",
+    "    key=lambda x: x[1],  # Sort by count\n",
+    "    reverse=True\n",
+    ")[:10]\n",
+    "\n",
+    "# Calculate percentage of users for each period\n",
+    "total_users = len([u for u in query_response.data if u[\"daily_active_periods\"]])\n",
+    "\n",
+    "print(\"\\nTop 10 Most Active Time Periods:\")\n",
+    "print(\"--------------------------------\")\n",
+    "for hour, count in top_10_periods:\n",
+    "    percentage = (count / total_users) * 100 if total_users > 0 else 0\n",
+    "    # Format the time period\n",
+    "    start_hour = int(hour)\n",
+    "    end_hour = (start_hour + 1) % 24\n",
+    "    period = f\"{str(start_hour).zfill(2)}:00-{str(end_hour).zfill(2)}:00\"\n",
+    "    \n",
+    "    print(f\"Time Period: {period}\")\n",
+    "    print(f\"Number of Users: {count:,}\")\n",
+    "    print(f\"Percentage of Users: {percentage:.1f}%\")\n",
+    "    print(\"--------------------------------\")\n"
+   ]
   }
  ],
  "metadata": {
